--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2327,7 +2327,7 @@
 		-webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
-		background: #544d55;
+		background: #ff0000;
 		border-radius: 4px;
 		border: 0;
 		color: #ffffff;
