page style changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2597,7 +2597,7 @@
 
 	#footer {
 		background-attachment: scroll;
-		background-color: #4eb980;
+		background-color: #ff0000;
 		background-image: url("images/bottom-3200.svg");
 		background-position: top center;
 		background-repeat: repeat-x;
@@ -2648,7 +2648,7 @@
 		#footer .button {
 			background: #ffffff;
 			box-shadow: inset 0 0 0 1px #ffffff;
-			color: #4eb980;
+			color: #ff0000;
 		}
 
 			#footer input[type="submit"]:hover,
