--- a/css/style.default.css
+++ b/css/style.default.css
@@ -39,7 +39,7 @@ NAVBAR
 }
 
 .navbar ul.nav>li>a:hover {
-    border-top: solid 3px #6aae7a;
+    border-top: solid 3px red;
 }
 
 @media (max-width: 767px) {
@@ -51,7 +51,7 @@ NAVBAR
 .navbar ul.nav>li.active>a,
 .navbar ul.nav>li.open>a {
     text-decoration: none !important;
-    border-top: solid 3px #6aae7a;
+    border-top: solid 3px red;
 }
 
 @media (max-width: 767px) {
@@ -259,7 +259,7 @@ INTRO
 }
 
 #intro .item h1 {
-    font-size: 40px;
+    font-size: 150px;
     text-transform: uppercase;
     letter-spacing: 0.1em;
     color: red;
