--- a/views/layouts/test.html
+++ b/views/layouts/test.html
@@ -10,15 +10,17 @@
 
 <head>
     <!-- Tab Title -->
-    <title>Eat da Burger!</title>
+    <title>No Limits! A Fitness App</title>
     <!-- Tab Image -->
-    <link rel="icon" href="../../public/assets/img/Krabby_Patty.png">
+    <link rel="icon" href="../../public/assets/img/arm.png">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom Styling -->
     <link rel="stylesheet" href="../../public/assets/css/burger_style.css">
     <!-- CSS Animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu|Seymour+One" rel="stylesheet">
 </head>
 
 <body>
@@ -30,14 +32,14 @@
 
         <!-- Burger Image -->
         <center>
-            <div class="row">
-                <img src="../../public/assets/img/Krabby_Patty.png">
+            <div class="animated infinite bounce row">
+                <img src="../../public/assets/img/arm.png">
             </div>
         </center>
 
         <!-- Page Title -->
         <center>
-            <h1 class="red_font">Eat da Burger! <small class="tiny_text">Best with a side of sound.</small></h1>
+            <h1 class=" animated lightSpeedIn red_font_h1">No Limits</h1>
         </center>
 
         <br>
@@ -47,21 +49,21 @@
             <center>
                 <!-- Left side (ready to eat) -->
                 <div class="col-md-6">
-                    <h4 class="red_font">Ready to eat!</h4>
+                    <h4 class="red_font">Ready to Workout!</h4>
                     <div id="ready_to_eat">
 
                         <!-- Dynamically Insert Ready Burgers Here -->
                         <div class="input-group">
-                            <li class="form-control">1. Bob's Burger</li>
+                            <li class="form-control">Dumbbell Bench Press, 3, 8, 10, 12, false, 2016-11-05 04:20:00</li>
                             <span class="input-group-btn devour-button">
-                  <button class="btn btn-success" type="button">Devour It!</button>
+                  <button class="btn btn-success" type="button" >Kill It!</button>
                 </span>
                         </div>
 
                         <div class="input-group">
-                            <li class="form-control">2. Good Burger</li>
+                            <li class="form-control">Lat Pulldown, 3, 8, 10, 12, false, 2016-11-05 04:20:00</li>
                             <span class="input-group-btn devour-button">
-                  <button class="btn btn-success" type="button">Devour It!</button>
+                  <button class="btn btn-success" type="button">Kill It!</button>
                 </span>
                         </div>
 
@@ -70,21 +72,21 @@
 
                 <!-- Right side (already eaten) -->
                 <div class="col-md-6">
-                    <h4 class="red_font">Already eaten!</h4>
+                    <h4 class="red_font">Already Demolished!</h4>
                     <div id="already_eaten">
 
                         <!-- Dynamically Insert Ready Burgers Here -->
                         <div class="input-group">
-                            <li class="form-control">3. Krabby Patty</li>
+                            <li class="form-control">Overhead Dumbbell Press, 3, 8, 10, 12, false, 2016-11-05 04:20:00</li>
                             <span class="input-group-btn whine-button">
-                  <button class="btn btn-info" type="button">Whine!</button>
+                  <button class="animated bounce btn btn-info" type="button">Demolished!</button>
                 </span>
                         </div>
 
                         <div class="input-group">
-                            <li class="form-control">4. Big Mac</li>
+                            <li class="form-control">Leg Press, 3, 8, 10, 12, false, 2016-11-05 04:20:00</li>
                             <span class="input-group-btn whine-button">
-                  <button class="btn btn-info" type="button">Whine!</button>
+                  <button class=" animated bounce btn btn-info " type="button">Demolished!</button>
                 </span>
                         </div>
 
@@ -103,7 +105,7 @@
 
             <!-- Burger Input Box -->
             <div class="form-group col-md-6">
-                <center><label class="red_font">Request a new burger and place your order!</label></center>
+                <center><label class="red_font">Enter Your Workout Plan</label></center>
                 <textarea class="form-control" columns="8" rows="4" id="new_burger"></textarea>
             </div>
 
@@ -114,7 +116,7 @@
 
         <!-- Submit Button -->
         <center>
-            <button id="submit-button" type="button" class="btn btn-danger">Place Order</button>
+            <button id="submit-button" type="button" class="btn btn-danger">Hit The Weights</button>
         </center>
 
     </div>
