--- a/views/layouts/test.html
+++ b/views/layouts/test.html
@@ -56,14 +56,14 @@
                         <div class="input-group">
                             <li class="form-control">Dumbbell Bench Press, 3, 8, 10, 12, false, 2016-11-05 04:20:00</li>
                             <span class="input-group-btn devour-button">
-                  <button class="btn btn-success" type="button" >Kill It!</button>
+                  <button class="animated zoomInLeft btn btn-success" class="btn btn-success active" type="button" >Kill It!</button>
                 </span>
                         </div>
 
                         <div class="input-group">
                             <li class="form-control">Lat Pulldown, 3, 8, 10, 12, false, 2016-11-05 04:20:00</li>
                             <span class="input-group-btn devour-button">
-                  <button class="btn btn-success" type="button">Kill It!</button>
+                  <button class="animated zoomInLeft btn btn-success"  class="btn btn-success active" type="button">Kill It!</button>
                 </span>
                         </div>
 
@@ -79,14 +79,14 @@
                         <div class="input-group">
                             <li class="form-control">Overhead Dumbbell Press, 3, 8, 10, 12, false, 2016-11-05 04:20:00</li>
                             <span class="input-group-btn whine-button">
-                  <button class="animated bounce btn btn-info" type="button">Demolished!</button>
+                  <button class="animated zoomInRight btn btn-info" class="btn btn-info active"  type="button">Demolished!</button>
                 </span>
                         </div>
 
                         <div class="input-group">
                             <li class="form-control">Leg Press, 3, 8, 10, 12, false, 2016-11-05 04:20:00</li>
                             <span class="input-group-btn whine-button">
-                  <button class=" animated bounce btn btn-info " type="button">Demolished!</button>
+                  <button class=" animated zoomInRight btn btn-info " type="button">Demolished!</button>
                 </span>
                         </div>
 
@@ -105,7 +105,7 @@
 
             <!-- Burger Input Box -->
             <div class="form-group col-md-6">
-                <center><label class="red_font">Enter Your Workout Plan</label></center>
+                <center><label class="red_font_plan">Enter Your Workout Plan</label></center>
                 <textarea class="form-control" columns="8" rows="4" id="new_burger"></textarea>
             </div>
 
@@ -116,7 +116,7 @@
 
         <!-- Submit Button -->
         <center>
-            <button id="submit-button" type="button" class="btn btn-danger">Hit The Weights</button>
+            <button id="submit-button" type="button" class="btn btn-danger" class="btn btn-danger active">Hit The Weights</button>
         </center>
 
     </div>
