--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,10 +1,10 @@
 body {
-    background: url("/Users/geraldperriman/Desktop/nolimits-fitness-app/public/assets/img/gym.jpg");
+    background: url("/assets/img/gym.jpg");
     font-family: 'Baloo Tammudu', cursive;
 }
 
 img {
-    width: 15%;
+    width: 1%3;
 }
 
 .red_font {
