--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,13 +8,17 @@
 <html>
   <head>
     <!-- Tab Title -->
-    <title>Eat da Burger!</title>
+     <title>No Limits! A Fitness App</title>
     <!-- Tab Image -->
-    <link rel="icon" href="/assets/img/Krabby_Patty.png">
+    <link rel="icon" href="/assets/img/arm.png">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom Styling -->
     <link rel="stylesheet" href="/assets/css/burger_style.css">
+     <!-- CSS Animations -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu|Seymour+One" rel="stylesheet">
   </head>
   <body>
   
@@ -24,17 +28,16 @@
       <br>
 
       <!-- Burger Image -->
-      <center>
-        <div class="row">
-          <img src="/assets/img/Krabby_Patty.png">
-        </div>
-      </center>
+       <center>
+            <div class="animated infinite bounce row">
+                <img src="/assets/img/arm.png">
+            </div>
+        </center>
 
       <!-- Page Title -->
-      <center>
-        <h1 class="red_font">Eat da Burger! <small class="tiny_text">Best with a side of audio.</small></h1>
-      </center>
-      
+       <center>
+            <h1 class=" animated lightSpeedIn red_font_h1">No Limits</h1>
+        </center>
       <br>
       
 
@@ -54,9 +57,11 @@
 
           <!-- Burger Input Box -->
           <div class="form-group col-md-6">
-            <center><label for="new_burger" class="red_font">Request a new burger and place your order!</label></center>
+            <center><label for="new_burger" class="red_font">Enter Your Workout Plan!</label></center>
             <textarea class="form-control" columns="8" rows="4" id="new_burger" name="burger_name"></textarea>
           </div>
+
+  
 
           <!-- Empty Div to help center textarea -->
           <div class="col-md-3"></div> 
@@ -64,7 +69,7 @@
       
         <!-- Submit Button -->
         <center>
-          <button id="submit-button" type="submit" class="btn btn-danger">Place Order</button>
+          <button id="submit-button" type="submit" class="btn btn-danger">Start Workout</button>
         </center>
 
       </form>
