--- a/views/layouts/test.html
+++ b/views/layouts/test.html
@@ -117,6 +117,40 @@
 
     </div>
 
+ <!-- *** FOOTER ***
+        _________________________________________________________ -->
+
+    <div class="section" id="footer">
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-sm-6">
+
+                    <p class="social">
+                        <a href="#" class="external facebook" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-facebook"></i></a>
+                        <a href="#" class="external instagram" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-instagram"></i></a>
+                        <a href="#" class="external twitter" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
+                        <a href="mailto:#" class="email" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
+                    </p>
+                </div>
+                <!-- /.6 -->
+
+                <div class="col-sm-6">
+                    <p>&copy; 2017 No Limits Template by <a href="https://github.com/nida7163/nolimits-fitness-app" class="external">No Limits</a>.</p>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.container -->
+    </div>
+    <!-- /.section -->
+
+    <!-- *** FOOTER END *** -->
+    
 </body>
+
+
 
 </html>
