--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,7 +45,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#intro">Home</a>
                     </li>
-                    <li><a href="#">Workouts</a>
+                    <li><a href="/signup">Workouts</a>
                     </li>
                     <li><a href="#">About Us</a>
                     </li>
